# backend

./: .coveragerc  .env.example  .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
shortcat/: asgi.py  settings.py  urls.py  wsgi.py
shorts/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  util.py  views.py
shorts/migrations/: 0001_initial.py  0002_rename_expire_at_short_expired_at.py  0002_shortclick_delete_shortview.py  0003_alter_short_code.py  0004_shortview_delete_shortstats.py
templates/: 404.html
tests/shorts/: conftest.py  test_models.py  test_permissions.py  test_serializers.py  test_util.py  test_views.py
tui/: client.py  tui.py  utils.py
